--- a/charts/apollo/templates/admin-service/servicemonitor.yaml
+++ b/charts/apollo/templates/admin-service/servicemonitor.yaml
@@ -30,7 +30,7 @@ spec:
       {{- end }}
       app.kubernetes.io/component: adminService
   endpoints:
-    - port: {{ .Values.adminService.service.port }}
+    - port: {{ .Values.adminService.service.port | quote }}
       path: {{ .Values.adminService.serviceMonitor.metricPath | default "/metrics" }}
       {{- if .Values.adminService.serviceMonitor.interval }}
       interval: {{ .Values.adminService.serviceMonitor.interval }}
