update: apollo chart.

--- a/charts/apollo/templates/admin-service/service-adminservice.yaml
+++ b/charts/apollo/templates/admin-service/service-adminservice.yaml
@@ -18,6 +18,7 @@ kind: Service
 metadata:
   name: {{ include "apollo.adminService.serviceName" . }}
   labels:
+    app.kubernetes.io/component: adminService
     {{- include "apollo.service.labels" . | nindent 4 }}
 spec:
 {{- with .Values.adminService.service }}
