--- a/charts/apollo/values.yaml
+++ b/charts/apollo/values.yaml
@@ -204,6 +204,8 @@ configService:
     ##    for: 5m
     ##    labels:
     ##      severity: warning
+    ##
+    rules: [ ]
 
 
 adminService:
@@ -334,15 +336,7 @@ adminService:
     ##    labels:
     ##      severity: warning
     ##
-    rules:
-      - alert: RequestExceptionTooMany
-        annotations:
-          subject: Apollo adminService too many exceptions on http request.
-          message: The metric http_server_requests_seconds_count has too many code 5xx exception, firing exception is {{ $labels.exception }} to {{ $labels.uri }}.
-        expr: sum(increase(http_server_requests_seconds_count{component="adminService", status="500"}[5m])) by (exception, uri) > 10
-        for: 5m
-        labels:
-          severity: warning
+    rules: [ ]
 
 
 portal:
@@ -479,3 +473,4 @@ portal:
     ##    labels:
     ##      severity: warning
     ##
+    rules: [ ]
