--- a/charts/yearning/templates/deployment.yaml
+++ b/charts/yearning/templates/deployment.yaml
@@ -43,9 +43,9 @@ spec:
             {{- toYaml .Values.pod.resources | nindent 12 }}
           {{- end }}
           volumeMounts:
-            - mountPath: /opt/config.toml
+            - mountPath: /opt/conf.toml
               name: config
-              subPath: config.toml
+              subPath: conf.toml
     {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
